--- a/css/layout.css
+++ b/css/layout.css
@@ -1,89 +1,94 @@
 html,
 body {
-    background-color: #F3FAF9;
+  background-color: #60C0F0;
+  font-family: 'DM Sans', sans-serif;
 }
 
-.pure-u-1 img {
-    width: 100vw;
+/* .pure-u-1 img {
+  width: 100vw;
 }
 
 .pure-u-1-3 img {
-    width: 30vw;
-    height: 30vw;
+  width: 30vw;
+  height: 30vw;
 }
 
 .pure-u-1-3 {
-    margin-top: 30px;
-    height: 30vw;
-}
+  margin-top: 30px;
+  height: 30vw;
+} */
 
 #text_div {
-    margin-left: 10px;
-    margin-right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 h1 {
-    text-align: center;
-    color: #527298;
-    font-size: 40px;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 900;
+  color: #4386a8;
+  font-family: 'Heebo', sans-serif;
+}
+
+h2{
+  color: #4386a8;
+  font-family: 'Heebo', sans-serif;
+}
+
+h3{
+  color: #4386a8;
+  font-family: 'Heebo', sans-serif;
 }
 
 p {
-    color: #527298;
-    font-size: 16px;
+  font-size: 16px;
+}
+
+.italic{
+  font-style: italic;
 }
 
 #map_overview {
-    width: 90%;
-    height: 90%;
-    text-align: center;
+  width: 90%;
+  height: 90%;
+  text-align: center;
 }
 
-body *{
-    font-family: 'Open Sans', sans-serif;
-  }
-  
-  h1 {
-    font-weight: 900;
-  }
-  
-  body {
-    background-color: lightgray;
-  }
-  
-  .page {
-    width: 850px;
-    background-color: white;
-    margin: auto;
-    padding: 50px;
-    padding-top: 35px;
-  }
-  
-  .vis-container {
-    width: 100%;
-  }
-  
-  .description h2,
-  h1 {
-    margin-top: 0px;
-  }
-  
-  .description-right {
-    padding-left: 20px;
-  }
-  
-  .description-left {
-    padding-right: 20px;
-  }
+.page {
+  width: 80%;
+  background-color: white;
+  margin: auto;
+  padding: 25px;
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
 
-  .description-middle {
-    text-align: center;
-  }
-  
-  .pure-g {
-    margin-bottom: 40px;
-  }
-  
-  .small-font {
-    font-size: 14px;
-  }
+.vis-container {
+  width: 90%;
+}
+
+.description h2,
+h1 {
+  margin-top: 0px;
+}
+
+.description-right {
+  padding-left: 20px;
+}
+
+.description-left {
+  padding-right: 20px;
+}
+
+.description-middle {
+  text-align: center;
+}
+
+/* .pure-g {
+  margin-bottom: 40px;
+} */
+
+.small-font {
+  font-size: 14px;
+}
